# OpenSign

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  install-service.sh  install.sh  opensign.py  pyproject.toml  requirements.txt  setup.py  startup.py
.github/workflows/: build.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt
docs/_static/: .gitignore
examples/: 64x32_two_lines.py  background.jpg.license  demo.py  demo.yml  demo2.py  image-scroller.py  mml.ppm  multicolored_text.py  multiple_canvases.py  multiple_canvases.yml  opensign_is_available.py  stroked_text.py  stroked_text_on_background_with_shadow.py  test.py  text_on_background.py
opensign/: __init__.py  canvas.py  colors.py  fontpool.py  message.py  script.py
opensign/animations/: __init__.py  fade.py  loop.py  scroll.py  split.py  static.py  wipe.py
service/: opensign.conf  opensign.service
